k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gips
    version: v1
    kind: web
  name: gips
spec:
  selector:
    app: gips
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
