k8s/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gips
  name: gips
spec:
  podSelector:
    matchLabels:
      app: gips
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: sre
      ports:
      - port: 8080
        protocol: TCP
